# azra_bills_api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml  ruff.yml
azra_bills/: enum.py  mixins.py  models.py
azra_bills/admin/models/: __init__.py  city.py  country.py  holiday.py  saas_admin.py  state.py  store.py
azra_bills/mixins/: soft_delete.py
azra_bills/models/: __init__.py  base.py  city.py  country.py  state.py  store.py  user.py
azra_bills_api/: base_factory.py  conftest.py  models.py  test_utils.py
azra_bills_api/admin/: __init__.py  enums.py  routes.py
azra_bills_api/admin/models/: __init__.py  city.py  country.py  holiday.py  saas_admin.py  state.py  store.py
azra_bills_api/admin/schemas/: saas_admin.py
azra_bills_api/admin/tasks/: saas_admin.py
azra_bills_api/admin/tests/: conftest.py  factory.py  test_saas_admin.py
azra_bills_api/admin/views/: saas_admin.py
azra_bills_api/config/: database.py  settings.py
azra_bills_api/config/celery/: __init__.py  app.py  decorator.py
azra_bills_api/config/mailer/: __init__.py  adapter.py  log_mail.py  smtp.py
azra_bills_api/core/: constant.py  dependencies.py  enums.py  exceptions.py  security.py  utils.py
azra_bills_api/migrations/: env.py
azra_store_lmi_api/: base_factory.py  conftest.py  models.py  test_utils.py
azra_store_lmi_api/admin/: __init__.py  routes.py
azra_store_lmi_api/admin/models/: __init__.py  city.py  country.py  holiday.py  saas_admin.py  state.py  store.py
azra_store_lmi_api/admin/tasks/: saas_admin.py
azra_store_lmi_api/admin/tests/: conftest.py  factory.py  test_saas_admin.py
azra_store_lmi_api/admin/views/: saas_admin.py
azra_store_lmi_api/apps/admin/: __init__.py  routes.py
azra_store_lmi_api/apps/admin/models/: __init__.py  city.py  country.py  holiday.py  saas_admin.py  state.py  store.py
azra_store_lmi_api/apps/admin/schemas/: saas_admin.py
azra_store_lmi_api/apps/admin/tests/: factory.py  test_saas_admin.py
azra_store_lmi_api/apps/admin/views/: saas_admin.py
azra_store_lmi_api/config/: database.py
azra_store_lmi_api/config/celery/: __init__.py  app.py  decorator.py
azra_store_lmi_api/config/logger/: app.py
azra_store_lmi_api/config/mailer/: __init__.py  adapter.py  base.py  log_mail.py  smtp.py
azra_store_lmi_api/core/: dependencies.py  enums.py
azra_store_lmi_api/migrations/: env.py
azra_store_lmi_api/templates/emails/: base.html
config/: database.py  dependencies.py  settings.py
config/logger/: app.py
core/: constant.py  database.py  dependencies.py  enums.py  exceptions.py  utils.py
migrations/: env.py
migrations/versions/: 2024_11_12_063723_ba0f3a914727_add_admin_models.py
